; ModuleID = '/home/carl/AnghaBench/git/extr_grep.c_grep_source_is_binary.c'
source_filename = "/home/carl/AnghaBench/git/extr_grep.c_grep_source_is_binary.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grep_source = type { i32, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.index_state = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.grep_source*, %struct.index_state*)* @grep_source_is_binary to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @grep_source_is_binary(%struct.grep_source* %0, %struct.index_state* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.grep_source*, align 8
  %5 = alloca %struct.index_state*, align 8
  store %struct.grep_source* %0, %struct.grep_source** %4, align 8
  store %struct.index_state* %1, %struct.index_state** %5, align 8
  %6 = load %struct.grep_source*, %struct.grep_source** %4, align 8
  %7 = load %struct.index_state*, %struct.index_state** %5, align 8
  %8 = call i32 @grep_source_load_driver(%struct.grep_source* %6, %struct.index_state* %7)
  %9 = load %struct.grep_source*, %struct.grep_source** %4, align 8
  %10 = getelementptr inbounds %struct.grep_source, %struct.grep_source* %9, i32 0, i32 2
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = icmp ne i32 %13, -1
  br i1 %14, label %15, label %21

15:                                               ; preds = %2
  %16 = load %struct.grep_source*, %struct.grep_source** %4, align 8
  %17 = getelementptr inbounds %struct.grep_source, %struct.grep_source* %16, i32 0, i32 2
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  store i32 %20, i32* %3, align 4
  br label %34

21:                                               ; preds = %2
  %22 = load %struct.grep_source*, %struct.grep_source** %4, align 8
  %23 = call i32 @grep_source_load(%struct.grep_source* %22)
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %33, label %25

25:                                               ; preds = %21
  %26 = load %struct.grep_source*, %struct.grep_source** %4, align 8
  %27 = getelementptr inbounds %struct.grep_source, %struct.grep_source* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.grep_source*, %struct.grep_source** %4, align 8
  %30 = getelementptr inbounds %struct.grep_source, %struct.grep_source* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 8
  %32 = call i32 @buffer_is_binary(i32 %28, i32 %31)
  store i32 %32, i32* %3, align 4
  br label %34

33:                                               ; preds = %21
  store i32 0, i32* %3, align 4
  br label %34

34:                                               ; preds = %33, %25, %15
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local i32 @grep_source_load_driver(%struct.grep_source*, %struct.index_state*) #1

declare dso_local i32 @grep_source_load(%struct.grep_source*) #1

declare dso_local i32 @buffer_is_binary(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
